--- a/lab04/conatct.html
+++ b/lab04/conatct.html
@@ -19,9 +19,9 @@
         <form action="https://formspree.io/f/xyyqnnkk" method="post">
             <label for ="favoritemovie"> Favorite Movie:</label> <br>
             <input type="text" id="favoritemovie" name="Favorite Movie"><br>
-            <input type="radio" id="" name="comedy" value="comedy">
+            <input type="radio" id="favoritemovie1" name="comedy" value="comedy">
             <label>comedy</label><br>
-            <input type="radio" id="" name="sad" value="sad"> 
+            <input type="radio" id="favoritemove2" name="sad" value="sad"> 
             <label>sad</label> <br>
             <label>Write comments about the movie below:</label><br>
             <textarea id= "comments" name= "comments" rows="3" cols="60"></textarea><br>
