--- a/lab10/index.html
+++ b/lab10/index.html
@@ -7,15 +7,19 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <style>
-        .img{float: left; margin-right: 10px;}
+        .img{
+            float: left; margin-right: 10px;
+            max-width: 100%;
+        }
         .clear {clear: both;}
         .quote{float: right;} 
+        
     </style>
     <body>
         <nav>
-            <a href="index.html">Home | </a>
-            <a href="skills.html">Skills | </a>
-            <a href="contact.html">Contact | </a>
+            <a href="index.html">Home <span> | </span></a>
+            <a href="skills.html">Skills <span> |</span> </a>
+            <a href="contact.html">Contact <span> | </span></a>
         </nav>
         <header><img class="img"  src="../images/ME.jpg" alt="ME"></header>
         <main>
