--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -23,29 +23,35 @@
         </nav>
         <h1>Contact</h1>
         <div class="contact">
-        <p>
+        <div class="address">
             Sophie Zober<br>
             809 Walnut Avenue<br>
             Syracuse University<br>
-
             <a href="malito:skzober@syr.edu"> skzober@syr.edu</a>
-        </p>
-        <a href="https://www.linkedin.com/in/sophiezober11162004/">My LinkedIn Profile</a>
-        <img src="../images/LI-Logo.svg.original. 2.svg" alt="LinkedIn Profile"><br>
+        </div>
+        <div class="linked">
+            <a href="https://www.linkedin.com/in/sophiezober11162004/">My LinkedIn Profile</a><br>
+            <img src="../images/LI-Logo.svg.original. 2.svg" alt="LinkedIn Profile"><br>
+        </div>
+        
         </div>
         <div class="map">
-        <div class="pic"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.132187742537!2d-76.13626712467241!3d43.03865017113787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1694717015506!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-        <form action="https://formspree.io/f/xyyqnnkk" method="post">
-            <label for ="favoritemovie"> Favorite Movie:</label> <br>
-            <input type="text" id="favoritemovie" name="Favorite Movie"><br>
-            <input type="radio" id="favoritemovie1" name="comedy" value="comedy">
-            <label>comedy</label><br>
-            <input type="radio" id="favoritemove2" name="sad" value="sad"> 
-            <label>sad</label> <br>
-            <label>Write comments about the movie below:</label><br>
-            <textarea id= "comments" name= "comments" rows="3" cols="60"></textarea><br>
-            <input type="submit" value="send form">
-        </form>
+        <div class="pic">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.132187742537!2d-76.13626712467241!3d43.03865017113787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1694717015506!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="form">
+            <form action="https://formspree.io/f/xyyqnnkk" method="post">
+                <label for ="favoritemovie"> Favorite Movie:</label> <br>
+                <input type="text" id="favoritemovie" name="Favorite Movie"><br>
+                <input type="radio" id="favoritemovie1" name="comedy" value="comedy">
+                <label>comedy</label><br>
+                <input type="radio" id="favoritemove2" name="sad" value="sad"> 
+                <label>sad</label> <br>
+                <label>Write comments about the movie below:</label><br>
+                <textarea id= "comments" name= "comments" rows="3" cols="60"></textarea><br>
+                <input type="submit" value="send form">
+            </form>
+        </div>
         </div>
         </div>
     </body>
