--- a/project6/home.html
+++ b/project6/home.html
@@ -18,8 +18,38 @@
             padding: 10px;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-size:18px;
+            display: flex;
+            background-color: #f0f0f0;
+            padding: 20px;
+            border-radius: 15px;
+
         }
-        .images{display: flex;}
+        .images{
+            display: flex;
+            justify-content: space-around;
+            height: 300px; 
+            background-color: #f0f0f0;
+            padding: 20px;
+            border-radius: 15px;
+        }
+        .sentence{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-align: center;
+            font-size: 22px;
+            background-color: #f0f0f0;
+            padding: 20px;
+            border-radius: 15px;
+
+        }
+        .story{
+            display: flex;
+            justify-content: center;
+            height: 400px;
+            background-color: #f0f0f0;
+            padding: 20px;
+            border-radius: 15px;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
@@ -33,10 +63,11 @@
     <p class="intro">Influencers and beauty are two topics that have always spiked my interest. Because of social media, there have been so many new products that people have become obsessed with. I'd create a website with all of the new brands, products, and gossip about influencers. This website would be updated as new products entered and exited the market. This website would be extremely useful to people who want to keep up with trends.</p>
     </div>
     <div class="images">
-    <img src="../images/project 3 images/makeup.jpg">
-    <img src="../images/project 3 images/asethic.jpg">
-    <img src="../images/project 3 images/pink.jpg"><br>
-    <p>Do you ever wonder how you can get the most viral products the quickest???</p><br>
-    <img src="../images/project 3 images/story.jpg"><br>
+    <img class="flex1" src="../images/project 3 images/makeup.jpg">
+    <img class="flex2" src="../images/project 3 images/asethic.jpg">
+    <img class="flex3" src="../images/project 3 images/pink.jpg"><br>
+    </div>
+    <p class="sentence">Do you ever wonder how you can get the most viral products the quickest???</p><br>
+    <img class="story" src="../images/project 3 images/story.jpg"><br>
 </body>
 </html>
