--- a/project7/viralproducts.html
+++ b/project7/viralproducts.html
@@ -103,4 +103,4 @@
     
     <p class="bottom">These products have gone viral for a while now! Run to your local stores to get them.</p>
 </main>
-</body
+</body>
