--- a/project7/influencer.html
+++ b/project7/influencer.html
@@ -46,7 +46,7 @@
         }
         .bottomtext {
         display: flex;
-        justify-content: space-around;
+        padding: 75px;
         }
         .parent {
             display: flex;
@@ -89,9 +89,9 @@
         <div class="imagecontainer2">
             <img src="../images/project 3 images/download copy.png" alt="WWW" height="100px" width="500px">
             <div class="verticalstack">
-                <img src="../images/project 3 images/danielle-bernstein.webp" alt="Danielle" class="imgs" height="50px">
-                <img src="../images/project 3 images/hbz-weworewhat-danielle-bernstein-overalls-06-1564676163.jpg" alt="DB" class="imgs" height="100px">
-                <img src="../images/project 3 images/new-weworewhat-collection-v0-ro8rslxtpjyb1.webp" alt="Bgas" class="imgs" height="100px">
+                <img src="../images/project 3 images/danielle-bernstein.webp" alt="Danielle" class="imgs" height="165px">
+                <img src="../images/project 3 images/hbz-weworewhat-danielle-bernstein-overalls-06-1564676163.jpg" alt="DB" class="imgs" height="165px">
+                <img src="../images/project 3 images/new-weworewhat-collection-v0-ro8rslxtpjyb1.webp" alt="Bgas" class="imgs" height="165x">
             </div>
         </div>
     </div>
