--- a/project7/influencer.html
+++ b/project7/influencer.html
@@ -46,14 +46,16 @@
         }
         .bottomtext {
         display: flex;
-        padding: 75px;
+        justify-content: space-around;
+        padding: 50px;
         }
         .parent {
             display: flex;
             justify-content: space-around;
         }
         .hailey {
-            padding-left: 35px;
+            padding-left: 50px;
+            align-items: center;
         }
     </style>
 </head>
@@ -77,7 +79,7 @@
 <section>
     <div class="parent">
         <div class="imagecontainer">
-            <img class="hailey" src="../images/project 3 images/Hailey_Bieber_2020.jpg" alt="Main Image" height="200px" width="200px">
+            <img class="hailey" src="../images/project 3 images/Hailey_Bieber_2020.jpg" alt="Main Image" height="250px" width="250px">
             <div class="verticalstack">
                 <img src="../images/project 3 images/download.png" alt="Rhode"  height="50px">
                 <img src="../images/project 3 images/rib-final-hero_2480x.webp" alt="Balm" height="100px">
@@ -96,11 +98,12 @@
         </div>
     </div>
         <div class="bottomtext">
-
+        <div>
             <p class="text">Haley Bieber is not only famous from her husband, celebrity and music artist Justin Bieber, but also from her own skincare line Rhode. Rhode is best known for their lip balms and skin products. Hailey frequently drops new lip balms and often collaborates to sponsor with other brands, which makes her product more engaging. </p>
-
+        </div>
+        <div>
             <p class="text">Danielle Bernstein is a famous influencer who launched her company, We Wore What, in 2010. She predominantly uses Instagram as her platform to vlog her life and promote her clothing brand. We Wore What launches new lines for each season. For example, during the summer vacation clothes are sold. Her newest line of clothing launched is for the upcoming holiday season, which includes a cozy collection. </p><br>
-
+        </div>
         </div>
 
     </section>
