--- a/project7/home.html
+++ b/project7/home.html
@@ -74,6 +74,19 @@
             padding: 20px;
             border-radius: 15px;
         }
+        .skip{
+            background-color: #ffffff;
+            padding: 5px;
+            border: 1px solild #000000;
+            text-decoration: none;
+            position:absolute; 
+            top: 10px;
+            left: -999px; 
+        }
+
+        .skip:focus{
+            left: 10px; 
+        }
     </style>
     
 </head>
@@ -81,6 +94,7 @@
     <h1 class="maintitle">The Life of Influencing</h1>
 <main>
     <nav>
+        <a href="#main" tabindex="1" class="skip">Skip to Content</a><br>
         <a href="home.html">Home | </a>
         <a href="viralproducts.html">Viral Products | </a>
         <a href="influencer.html">Influencers  </a><br>
