--- a/project7/home.html
+++ b/project7/home.html
@@ -43,6 +43,7 @@
             background-color: #f0f0f0;
             padding: 20px;
             border-radius: 15px;
+    
 
         }
         
@@ -113,7 +114,7 @@
     <p class="sentence">Do you ever wonder how you can get the most viral products the quickest???</p><br>
     </section>
         <div class="bottomrow">
-        <img  src="../images/project 3 images/story.jpg" class="centeredimage"><br>
+        <img  src="../images/project 3 images/story.jpg" class="centeredimage" alt="story"><br>
         </div>
     <p class="last">Are you interested in learning about others stories and how they became famous? Continue looking:</p>
 </main>
