--- a/project7/home.html
+++ b/project7/home.html
@@ -107,16 +107,18 @@
     </section>
     <section>
     <div class="images">
-            <img class="flex1" src="../images/project 3 images/makeup.jpg" height="300px" alt="makeup">
-            <img class="flex2" src="../images/project 3 images/asethic.jpg" height="300px" alt="asethic">
-            <img class="flex3" src="../images/project 3 images/pink.jpg" height="300px" alt="pinkpic"><br>
+            <img class="flex1" src="../images/project 3 images/makeup.jpg" height="300px" alt="makeuproducts">
+            <img class="flex2" src="../images/project 3 images/asethic.jpg" height="300px" alt="flowerasethic">
+            <img class="flex3" src="../images/project 3 images/pink.jpg" height="300px" alt="pinkmakeuppic"><br>
     </div>
     <p class="sentence">Do you ever wonder how you can get the most viral products the quickest???</p><br>
     </section>
+    <section>
         <div class="bottomrow">
         <img  src="../images/project 3 images/story.jpg" class="centeredimage" alt="story"><br>
         </div>
     <p class="last">Are you interested in learning about others stories and how they became famous? Continue looking:</p>
+    </section>
 </main>
 </body>
 </html>
