--- a/project7/influencer.html
+++ b/project7/influencer.html
@@ -113,17 +113,16 @@
 <body>
     <h1 class="maintitle">Famous Influencers</h1>
 <main>
+    <section>
     <nav>
         <a href="#main" tabindex="1" class="skip">Skip to Content</a><br>
         <a href="home.html">Home | </a>
         <a href="viralproducts.html">Viral Products | </a>
         <a href="influencer.html">Influencers  </a><br>
     </nav>
-    <section>
-    
+    </section>
     <div class="line1">        
-
-<section>
+    <section>
     <div class="parent">
 
         <div class="imagecontainer">
@@ -178,3 +177,5 @@
         </form>
 
     </section>
+</main>
+</body>
