--- a/project7/home.html
+++ b/project7/home.html
@@ -86,7 +86,7 @@
         }
 
         .skip:focus{
-            left: 10px; 
+            left: 20px; 
         }
     </style>
     
@@ -102,7 +102,7 @@
     </nav>
     <section>
     <div>
-        <p class="intro">Influencers and beauty are two topics that have always spiked my interest. Because of social media, there have been so many new products that people have become obsessed with. I'd create a website with all of the new brands, products, and gossip about influencers. This website would be updated as new products entered and exited the market. This website would be extremely useful to people who want to keep up with trends.</p>
+        <p class="intro" >Influencers and beauty are two topics that have always spiked my interest. Because of social media, there have been so many new products that people have become obsessed with. I'd create a website with all of the new brands, products, and gossip about influencers. This website would be updated as new products entered and exited the market. This website would be extremely useful to people who want to keep up with trends.</p>
     </div>
     </section>
     <section>
@@ -117,8 +117,4 @@
         <div class="bottomrow">
         <img  src="../images/project 3 images/story.jpg" class="centeredimage" alt="story"><br>
         </div>
-    <p class="last">Are you interested in learning about others stories and how they became famous? Continue looking:</p>
-    </section>
-</main>
-</body>
-</html>
+    <p class="last">Are you interested in learning about others stories and how they became famous? Contin
