--- a/project7/home.html
+++ b/project7/home.html
@@ -117,4 +117,8 @@
         <div class="bottomrow">
         <img  src="../images/project 3 images/story.jpg" class="centeredimage" alt="story"><br>
         </div>
-    <p class="last">Are you interested in learning about others stories and how they became famous? Contin
+    <p class="last">Are you interested in learning about others stories and how they became famous? Continue looking:</p>
+    </section>
+</main>
+</body>
+</html>
