--- a/project7/home.html
+++ b/project7/home.html
@@ -58,10 +58,8 @@
             border-radius: 15px;
         }
         @media only screen and (max-width: 601px) {
-        nav a{display:100%}
         nav a{display: block;}
         span{display: none;}
-        nav a{display: space-around;}
         .images {display: block;}
         .images img { max-width: 200px;}
         }
@@ -107,9 +105,9 @@
     </section>
     <section>
     <div class="images">
-            <img class="flex1" src="../images/project 3 images/makeup.jpg" height="300px" alt="makeuproducts">
-            <img class="flex2" src="../images/project 3 images/asethic.jpg" height="300px" alt="flowerasethic">
-            <img class="flex3" src="../images/project 3 images/pink.jpg" height="300px" alt="pinkmakeuppic"><br>
+            <img class="flex1" src="../images/project 3 images/makeup.jpg" height="300" alt="makeuproducts">
+            <img class="flex2" src="../images/project 3 images/asethic.jpg" height="300" alt="flowerasethic">
+            <img class="flex3" src="../images/project 3 images/pink.jpg" height="300" alt="pinkmakeuppic"><br>
     </div>
     <p class="sentence">Do you ever wonder how you can get the most viral products the quickest???</p><br>
     </section>
