--- a/project7/influencer.html
+++ b/project7/influencer.html
@@ -88,7 +88,7 @@
         .skip{
             background-color: #ffffff;
             padding: 5px;
-            border: 1px solild #000000;
+            border: 1px #000000;
             text-decoration: none;
             position:absolute; 
             top: 10px;
@@ -119,18 +119,17 @@
         <a href="viralproducts.html">Viral Products | </a>
         <a href="influencer.html">Influencers  </a><br>
     </nav>
-    </section>
-    <div class="line1">        
+    </section>        
     <section>
     <div class="parent">
 
         <div class="imagecontainer">
             <h2 class="title">Hailey Bieber: Rhode</h2>
-            <img class="hailey" src="../images/project 3 images/Hailey_Bieber_2020.jpg" alt="Main Image" height="250" width="250">
+            <img class="hailey" src="../images/project3/Hailey_Bieber_2020.jpg" alt="Main Image" height="250" width="250">
             <div class="verticalstack">
-                <img src="../images/project 3 images/download.png" alt="Rhode"  height="50">
-                <img src="../images/project 3 images/rib-final-hero_2480x.webp" alt="Balm" height="115">
-                <img src="../images/project 3 images/Desktop-Ribbon_Grid-2_c305089e-89fe-4873-bbd2-0e5b5ec7a89a_2480x.webp" alt="Lips"  height="115">
+                <img src="../images/project3/download.png" alt="Rhode"  height="50">
+                <img src="../images/project3/rib-final-hero_2480x.webp" alt="Balm" height="115">
+                <img src="../images/project3/Desktop-Ribbon_Grid-2_c305089e-89fe-4873-bbd2-0e5b5ec7a89a_2480x.webp" alt="Lips"  height="115">
                     <p class="text">Haley Bieber is not only famous from her husband, celebrity and music artist Justin Bieber, but also from her own skincare line Rhode. Rhode is best known for their lip balms and skin products. Hailey frequently drops new lip balms and often collaborates to sponsor with other brands, which makes her product more engaging. </p>
                 
             </div>
@@ -138,12 +137,12 @@
         </div>
         <div class="imagecontainer2">
             <h2 class="title2">Danielle Bernstien: We Wore What</h2>
-            <img src="../images/project 3 images/download copy.png" alt="WWW" height="175px" width="450">
+            <img src="../images/project3/WWW.png" alt="WWW" height="175px" width="450">
       
             <div class="verticalstack">
-                <img src="../images/project 3 images/danielle-bernstein.webp" alt="Danielle" class="imgs" height="165">
-                <img src="../images/project 3 images/hbz-weworewhat-danielle-bernstein-overalls-06-1564676163.jpg" alt="DB" class="imgs" height="165">
-                <img src="../images/project 3 images/new-weworewhat-collection-v0-ro8rslxtpjyb1.webp" alt="Bgas" class="imgs" height="165">
+                <img src="../images/project3/danielle-bernstein.webp" alt="Danielle" class="imgs" height="165">
+                <img src="../images/project3/hbz-weworewhat-danielle-bernstein-overalls-06-1564676163.jpg" alt="DB" class="imgs" height="165">
+                <img src="../images/project3/new-weworewhat-collection-v0-ro8rslxtpjyb1.webp" alt="Bgas" class="imgs" height="165">
             </div>
         </div>
     </div>
