--- a/project7/home.html
+++ b/project7/home.html
@@ -76,7 +76,7 @@
         .skip{
             background-color: #ffffff;
             padding: 5px;
-            border: 1px solild #000000;
+            border: 1px #000000;
             text-decoration: none;
             position:absolute; 
             top: 10px;
@@ -90,8 +90,9 @@
     
 </head>
 <body>
+    <main>
     <h1 class="maintitle">The Life of Influencing</h1>
-<main>
+
     <nav>
         <a href="#main" tabindex="1" class="skip">Skip to Content</a><br>
         <a href="home.html">Home | </a>
@@ -105,15 +106,15 @@
     </section>
     <section>
     <div class="images">
-            <img class="flex1" src="../images/project 3 images/makeup.jpg" height="300" alt="makeuproducts">
-            <img class="flex2" src="../images/project 3 images/asethic.jpg" height="300" alt="flowerasethic">
-            <img class="flex3" src="../images/project 3 images/pink.jpg" height="300" alt="pinkmakeuppic"><br>
+            <img class="flex1" src="../images/project3/makeup.jpg"  height="300" alt="makeuproducts">
+            <img class="flex2" src="../images/project3/asethic.jpg" height="300" alt="flowerasethic">
+            <img class="flex3" src="../images/project3/pink.jpg" height="300" alt="pinkmakeuppic"><br>
     </div>
     <p class="sentence">Do you ever wonder how you can get the most viral products the quickest???</p><br>
     </section>
     <section>
         <div class="bottomrow">
-        <img  src="../images/project 3 images/story.jpg" class="centeredimage" alt="story"><br>
+        <img  src="../images/project3/story.jpg" class="centeredimage" alt="story"><br>
         </div>
     <p class="last">Are you interested in learning about others stories and how they became famous? Continue looking:</p>
     </section>
