--- a/project7/home.html
+++ b/project7/home.html
@@ -91,6 +91,7 @@
 </head>
 <body>
     <main>
+    <section>
     <h1 class="maintitle">The Life of Influencing</h1>
 
     <nav>
@@ -99,6 +100,7 @@
         <a href="viralproducts.html">Viral Products | </a>
         <a href="influencer.html">Influencers  </a><br>
     </nav>
+    </section>
     <section>
     <div>
         <p class="intro" >Influencers and beauty are two topics that have always spiked my interest. Because of social media, there have been so many new products that people have become obsessed with. I'd create a website with all of the new brands, products, and gossip about influencers. This website would be updated as new products entered and exited the market. This website would be extremely useful to people who want to keep up with trends.</p>
