--- a/project7/influencer.html
+++ b/project7/influencer.html
@@ -135,9 +135,11 @@
             </div>
 
         </div>
+    </section>
+    <section>
         <div class="imagecontainer2">
             <h2 class="title2">Danielle Bernstien: We Wore What</h2>
-            <img src="../images/project3/WWW.png" alt="WWW" height="175px" width="450">
+            <img src="../images/project3/WWW.png" alt="WWW" height="175" width="450">
       
             <div class="verticalstack">
                 <img src="../images/project3/danielle-bernstein.webp" alt="Danielle" class="imgs" height="165">
@@ -154,6 +156,8 @@
             <p class="text2">Danielle Bernstein is a famous influencer who launched her company, We Wore What, in 2010. She predominantly uses Instagram as her platform to vlog her life and promote her clothing brand. We Wore What launches new lines for each season. For example, during the summer vacation clothes are sold. Her newest line of clothing launched is for the upcoming holiday season, which includes a cozy collection. </p><br>
         </div>
         </div>
+    </section>
+    <section>
         <form action="" method="post" class="endform">
             <label for ="fullname"> Name:</label> <br>
             <input type="text" id="fullname" name="Full Name"><br>
