--- a/project7/viralproducts.html
+++ b/project7/viralproducts.html
@@ -81,7 +81,8 @@
             <img src="../images/project3/bronzerdrops.webp" alt="Bronzing Drops" height="300"><br>
             <p class="words">These bronzing drops have been going viral since 2021. They were launched in 2018, however nobody knew what they were until makeup became viral on TikTok. These bronzing drops make you tan without having to lay in the sun or use a tanning bed. They are a great base for undernath your makeup or if you just want to glow on a regualr day.</p><br>
     </div>
-
+    </section>
+    <section>
         <div>
             <h2 class="title">Summer Fridays Lip Balm</h2>
             <img src="../images/project3/summerfriday.webp" alt="Summer Fridays" height="300"><br>
